# src/backend/internal/domain/token/entity.go
@@ -1,0 +1,17 @@
+package token
+
+import (
+	"time"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+type Token struct {
+	ID        primitive.ObjectID `bson:"_id,omitempty"`
+	Token     string             `bson:"token"`
+	Name      string             `bson:"name"`
+	ExpiresAt time.Time          `bson:"expires_at"`
+	CreatedAt time.Time          `bson:"created_at"`
+	UpdatedAt time.Time          `bson:"updated_at"`
+	DeletedAt *time.Time         `bson:"deleted_at,omitempty"`
+}
